--- a/index.html
+++ b/index.html
@@ -371,156 +371,138 @@
         }
 
         /* Media query para móviles */
-        @media (max-width: 480px) {
-            body {
-                font-size: 14px; /* tamaño legible */
-                line-height: 1.2; /* interlineado reducido */
-            }
-            .container {
-                width: 95vw;
-                max-width: 400px;
-                margin: 8px auto;
-                border-radius: 10px;
-                box-shadow: none;
-            }
-            .form-container {
-                padding: 12px 10px; /* menos padding */
-            }
-            .form-card {
-                padding: 14px 12px 8px 12px; /* menos padding vertical */
-                margin-bottom: 8px;
-                border: 1px solid var(--border);
-                box-shadow: none;
-            }
-            .form-card h3 {
-                font-size: 1.1em;
-                margin-bottom: 6px; /* menos margen */
-                line-height: 1.2;
-            }
-            .input-row-group {
-                display: flex;
-                flex-wrap: wrap;
-                gap: 10px 12px;
-            }
-            .input-row {
-                display: flex;
-                align-items: center;
-                margin-bottom: 6px;
-                gap: 6px; /* menos espacio entre label e input */
-                flex: 1 1 48%; /* dos columnas aproximadas */
-                min-width: 0 !important;
-            }
-            .input-row label {
-                font-size: 1em;
-                flex: 0 0 40%; /* menos espacio para label */
-                margin-bottom: 0;
-                line-height: 1.2;
-            }
-            .input-row input,
-            .input-row select {
-                flex: 1 1 auto;
-                padding: 6px 8px; /* menos padding vertical */
-                font-size: 1em;
-                height: 32px; /* input más compacto */
-                box-sizing: border-box;
-            }
-            .unit {
-                margin-left: 4px;
-                font-size: 0.85em;
-                color: var(--text-soft);
-                display: inline-block;
-                margin-top: 0;
-            }
-            .calculate-btn {
-                width: 100%;
-                font-size: 1.1em;
-                padding: 10px 0;
-                border-radius: 7px;
-                margin-top: 10px;
-                box-shadow: none;
-            }
-            .results {
-                padding: 12px 10px;
-                font-size: 1em;
-                margin-top: 14px;
-                line-height: 1.3;
-            }
-            .parameter-status {
-                grid-template-columns: 1fr;
-                gap: 6px;
-                margin-top: 8px;
-            }
-            .parameter-item {
-                font-size: 0.9em;
-                padding: 5px 8px;
-                word-wrap: break-word;
-                margin-bottom: 4px;
-                line-height: 1.2;
-            }
-            .info-box,
-            .referencias,
-            .fa-warning,
-            .fevi-warning,
-            .tr-warning,
-            .indeterminate-note,
-            .age-reference,
-            .recommendations,
-            .missing-params-warning {
-                font-size: 0.9em;
-                padding: 8px 10px;
-                margin-bottom: 8px;
-                line-height: 1.2;
-            }
-            .recommendations {
-                margin-top: 8px;
-                padding: 8px 10px;
-            }
-            .modal-content {
-                margin: 10px 5px;
-                max-width: 95vw;
-                padding: 18px 14px;
-                max-height: 90vh;
-            }
-            .modal-table {
-                font-size: 0.85em;
-            }
-            /* Evitar scroll horizontal en inputs numéricos */
-            input[type=number]::-webkit-inner-spin-button,
-            input[type=number]::-webkit-outer-spin-button {
-                -webkit-appearance: none;
-                margin: 0;
-            }
-        }
-
-        /* Ajustes para pantallas muy pequeñas (ej. iPhone) */
-        @media (max-width: 360px) {
-            .input-row-group {
-                display: block; /* vertical stack */
-            }
-            .input-row {
-                flex: 1 1 100% !important; /* full width */
-                margin-bottom: 8px;
-                gap: 6px;
-            }
-            .input-row label {
-                flex: none;
-                width: auto;
-                min-width: 0;
-                white-space: normal;
-                margin-bottom: 4px;
-                display: block;
-            }
-            .input-row input,
-            .input-row select {
-                flex: 1 1 auto;
-                min-width: 0;
-                max-width: 100%;
-            }
-            .unit {
-                margin-left: 8px;
-                white-space: nowrap;
-            }
-        }
+@media (max-width: 480px) {
+    body {
+        font-size: 14px;
+        line-height: 1.3;
+    }
+    .container {
+        width: 95vw;
+        max-width: 400px;
+        margin: 8px auto;
+        border-radius: 10px;
+        box-shadow: none;
+    }
+    .form-container {
+        padding: 12px 10px;
+    }
+    .form-card {
+        padding: 14px 12px 8px 12px;
+        margin-bottom: 8px;
+        border: 1px solid var(--border);
+        box-shadow: none;
+    }
+    .form-card h3 {
+        font-size: 1.1em;
+        margin-bottom: 8px;
+        line-height: 1.3;
+    }
+    .input-row-group {
+        display: block; /* vertical stack */
+    }
+    .input-row {
+        display: flex;
+        flex-direction: column; /* label arriba, input abajo */
+        align-items: flex-start;
+        margin-bottom: 12px;
+        gap: 4px;
+        width: 100%;
+        min-width: 0 !important;
+    }
+    .input-row label {
+        font-size: 1em;
+        flex: none;
+        width: 100%;
+        margin-bottom: 0;
+        white-space: normal;
+        color: var(--text-main);
+    }
+    .input-row input,
+    .input-row select {
+        width: 100%;
+        flex: none;
+        padding: 8px 10px;
+        font-size: 1em;
+        height: 36px;
+        box-sizing: border-box;
+        border-radius: 6px;
+        border: 1.5px solid var(--border);
+        background: #f7fbfd;
+        color: var(--text-main);
+        transition: border-color 0.2s;
+    }
+    .input-row input:focus,
+    .input-row select:focus {
+        outline: none;
+        border-color: var(--accent);
+    }
+    .unit {
+        margin-left: 0;
+        margin-top: 4px;
+        font-size: 0.85em;
+        color: var(--text-soft);
+        display: inline-block;
+    }
+    .calculate-btn {
+        width: 100%;
+        font-size: 1.1em;
+        padding: 10px 0;
+        border-radius: 7px;
+        margin-top: 10px;
+        box-shadow: none;
+    }
+    .results {
+        padding: 12px 10px;
+        font-size: 1em;
+        margin-top: 14px;
+        line-height: 1.3;
+    }
+    .parameter-status {
+        grid-template-columns: 1fr;
+        gap: 6px;
+        margin-top: 8px;
+    }
+    .parameter-item {
+        font-size: 0.9em;
+        padding: 5px 8px;
+        word-wrap: break-word;
+        margin-bottom: 4px;
+        line-height: 1.2;
+    }
+    .info-box,
+    .referencias,
+    .fa-warning,
+    .fevi-warning,
+    .tr-warning,
+    .indeterminate-note,
+    .age-reference,
+    .recommendations,
+    .missing-params-warning {
+        font-size: 0.9em;
+        padding: 8px 10px;
+        margin-bottom: 8px;
+        line-height: 1.2;
+    }
+    .recommendations {
+        margin-top: 8px;
+        padding: 8px 10px;
+    }
+    .modal-content {
+        margin: 10px 5px;
+        max-width: 95vw;
+        padding: 18px 14px;
+        max-height: 90vh;
+    }
+    .modal-table {
+        font-size: 0.85em;
+    }
+    /* Evitar scroll horizontal en inputs numéricos */
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+}
     </style>
 </head>
 <body>
@@ -1266,3 +1248,4 @@
     </script>
 </body>
 </html>
+
